--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 galaxy_info:
-  author: your name
+  role_name: devops20_vectorrole
+  author: svinopterix
   description: your role description
   company: your company (optional)
 
